// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests React Components Creates a Dimension with multiple Components 1`] = `
Array [
  <div
    className="dim-0 Basic Human Needs"
    id="Basic_Human_Needs"
  >
    <h3
      className="dimension-title"
      id="Basic_Human_Needs"
    >
      Basic Human Needs
    </h3>
    <div
      className="component-box"
    >
      <div
        className="component"
        id="Nutrition_and_Basic_Medical_Care"
      >
        <p>
          Do people have enough food to eat and are they receiving basic medical care? 
        </p>
        <ul>
          <li
            class="list-item"
            title="Age-standardized Disability-Adjusted Life Years (DALYs) rate caused by HIV/AIDS, tuberculosis, diarrhea, intestinal infections, respiratory infections, otitis media, meningitis, encephalitis, diptheria, whooping cough, tetanus, measles, varicella, herpes zoster, malaria, Chagas disease, leishmaniasis, typanosomiasis, schistosomiasis, cysticercosis, cycstic echinococcosis, lymphatic filariasis, onchocerciasis, trachoma, dengue, yellow feber, rabies, intestinal nematode infections, food-borne trematodiases, leprosy, ebola, zika virus, guinea worm disease, sexually transmitted diseases (excluding HIV), hepatitis, and other infectious diseases per 100,000 people."
          >
            Infectious diseases 
            <a
              class="citation"
              href="http://ghdx.healthdata.org/gbd-results-tool"
              rel="noopener noreferrer"
              target="_blank"
              title="Institute for Health Metrics and Evaluation"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Probability of dying between birth and exactly 5 years of age, expressed per 1,000 live births. "
          >
            Child mortality rate 
            <a
              class="citation"
              href="http://www.childmortality.org"
              rel="noopener noreferrer"
              target="_blank"
              title="UN Inter-agency Group for Child Mortality Estimation"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Risk-weighted prevalence of stunting in children under 5 as measured by the summary exposure value (SEV) for child stunting. "
          >
            Child stunting 
            <a
              class="citation"
              href="http://ghdx.healthdata.org/gbd-results-tool"
              rel="noopener noreferrer"
              target="_blank"
              title="Institute for Health Metrics and Evaluation"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Maternal deaths per 100,000 livebirths in women aged 10-54 years."
          >
            Maternal mortality rate 
            <a
              class="citation"
              href="http://ghdx.healthdata.org/record/ihme-data/gbd-2017-health-related-sdgs-1990-2030"
              rel="noopener noreferrer"
              target="_blank"
              title="Institute for Health Metrics and Evaluation"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="The prevalence of undernourishment expresses the probability that a randomly selected individual from the population consumes an amount of calories that is insufficient to cover her/his energy requirement for an active and healthy life. The indicator is computed by comparing a probability distribution of habitual daily dietary energy consumption with a threshold level called the minimum dietary energy requirement. Both are based on the notion of an average individual in the reference population."
          >
            Undernourishment 
            <a
              class="citation"
              href="http://www.fao.org/economic/ess/ess-fs/ess-fadata/en/"
              rel="noopener noreferrer"
              target="_blank"
              title="Food and Agriculture Organization of the United Nations"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Risk-weighted, age-standardized prevalence of nutrition low in fruits and vegetables as measured by the summary exposure value (SEV)."
          >
            Diet low in fruits and vegetables
            <a
              class="citation"
              href="http://ghdx.healthdata.org/gbd-results-tool"
              rel="noopener noreferrer"
              target="_blank"
              title="Institute for Health Metrics and Evaluation"
            >
              ⓘ
            </a>
          </li>
        </ul>
        <img
          alt="Do people have enough food to eat and are they receiving basic medical care? "
          className="component-img"
          src="test-file"
        />
        <h5
          class="component-title"
          style="backgroundColor: rgb(225, 100, 100)"
        >
          Nutrition and Basic Medical Care
        </h5>
      </div>
      <div
        className="component"
        id="Water_and_Sanitation"
      >
        <p>
          Can people drink water and keep themselves clean without getting sick?
        </p>
        <ul>
          <li
            class="list-item"
            title="Proportion of population with access to improved toilet types as defined by the Joint Monitoring Program (JMP)."
          >
            Access to improved sanitation 
            <a
              class="citation"
              href="http://ghdx.healthdata.org/record/global-burden-disease-study-2019-gbd-2019-covariates-1980-2019"
              rel="noopener noreferrer"
              target="_blank"
              title="Institute for Health Metrics and Evaluation"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Proportion of population with access to improved water sources as defined by the Joint Monitoring Program (JMP)."
          >
            Access to improved water source 
            <a
              class="citation"
              href="http://ghdx.healthdata.org/record/global-burden-disease-study-2019-gbd-2019-covariates-1980-2019"
              rel="noopener noreferrer"
              target="_blank"
              title="Institute for Health Metrics and Evaluation"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Age-standardized Disability-Adjusted Life Years (DALYs) rate attributable to unsafe water, sanitation and hygiene per 100,000 people."
          >
            Unsafe water, sanitation and hygiene
            <a
              class="citation"
              href="http://ghdx.healthdata.org/gbd-results-tool"
              rel="noopener noreferrer"
              target="_blank"
              title="Institute for Health Metrics and Evaluation"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="The proportion of respondents answering 'satisfied' to the question, \\"In the city or area where you live, are you satisfied or dissatisfied with the quality of water?\\""
          >
            Satisfaction with water quality
            <a
              class="citation"
              href="https://ga.gallup.com/"
              rel="noopener noreferrer"
              target="_blank"
              title="Gallup World Poll"
            >
              ⓘ
            </a>
          </li>
        </ul>
        <img
          alt="Can people drink water and keep themselves clean without getting sick?"
          className="component-img"
          src="test-file"
        />
        <h5
          class="component-title"
          style="backgroundColor: rgb(0, 150, 225)"
        >
          Water and Sanitation
        </h5>
      </div>
      <div
        className="component"
        id="Shelter"
      >
        <p>
          Do people have adequate housing with basic utilities?
        </p>
        <ul>
          <li
            class="list-item"
            title="Age-standardized Disability-Adjusted Life Years (DALYs) rate caused by household air pollution from solid fuels per 100,000 people. Household air pollution includes exposure to particulate matter less than 2.5 microns in diameter (PM2.5) due to the use of solid fuels for cooking, including coal, charcoal, wood, agricultural residue, and animal dung."
          >
            Household air pollution
            <a
              class="citation"
              href="http://ghdx.healthdata.org/gbd-results-tool"
              rel="noopener noreferrer"
              target="_blank"
              title="Institute for Health Metrics and Evaluation"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="The proportion of respondents answering 'dissatisfied' to the question, “In the city or area where you live, are you satisfied or dissatisfied with the availability of good, affordable housing?”"
          >
            Dissatisfaction with housing affordability 
            <a
              class="citation"
              href="https://ga.gallup.com/"
              rel="noopener noreferrer"
              target="_blank"
              title="Gallup World Poll"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="The percentage of the population with access to electricity."
          >
            Access to electricity 
            <a
              class="citation"
              href="https://data.worldbank.org/indicator/EG.ELC.ACCS.ZS"
              rel="noopener noreferrer"
              target="_blank"
              title="SE4ALL Global Tracking Framework (World Bank, International Energy Agency, and the Energy Sector Management Assistance Program)"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="The proportion of  population primarily using clean cooking fuels and technologies for cooking."
          >
            Usage of clean fuels and technology for cooking 
            <a
              class="citation"
              href="https://apps.who.int/gho/data/node.main.SDGFUELS712?lang=en"
              rel="noopener noreferrer"
              target="_blank"
              title="World Health Organization"
            >
              ⓘ
            </a>
          </li>
        </ul>
        <img
          alt="Do people have adequate housing with basic utilities?"
          className="component-img"
          src="test-file"
        />
        <h5
          class="component-title"
          style="backgroundColor: rgb(255, 100, 255)"
        >
          Shelter
        </h5>
      </div>
      <div
        className="component"
        id="Personal_Safety"
      >
        <p>
          Do people feel safe?
        </p>
        <ul>
          <li
            class="list-item"
            title="Age-standardized Disability-Adjusted Life Years (DALYs) per 100,000 people from interpersonal violence. Interpersonal violence is defined as death or disability from intentional use of physical force or power, threatened or actual, from another person or group not including military or police forces."
          >
            Interpersonal violence  
            <a
              class="citation"
              href="http://ghdx.healthdata.org/gbd-results-tool"
              rel="noopener noreferrer"
              target="_blank"
              title="Institute for Health Metrics and Evaluation"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Age-standardized Disability-Adjusted Life Years (DALYs) per 100,000 people due to injuries related to transportation. These injuries include road injuries (death or disability due to unintentional interaction with an automobile, motorcycle, pedal cycle, or other vehicles) as well as other transport injuries."
          >
            Transportation related injuries 
            <a
              class="citation"
              href="http://ghdx.healthdata.org/gbd-results-tool"
              rel="noopener noreferrer"
              target="_blank"
              title="Institute for Health Metrics and Evaluation"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Physical violence index  is based on indicators that reflect violence committed by government agents and that are not directly referring to elections."
          >
            Political killings and torture 
            <a
              class="citation"
              href="https://v-dem.net/vdemds.html"
              rel="noopener noreferrer"
              target="_blank"
              title="Varieties of Democracy (V-Dem), Dataset Version 12"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Age-standardised prevalence of ever-partnered women aged 15 years and older who experienced physical or sexual violence by a current or former intimate partner in the last 12 months (%)."
          >
            Intimate partner violence
            <a
              class="citation"
              href="http://ghdx.healthdata.org/record/ihme-data/gbd-2017-health-related-sdgs-1990-2030"
              rel="noopener noreferrer"
              target="_blank"
              title="Institute for Health Metrics and Evaluation"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="The proportion of respondents answering 'yes' to the question, \\"Within the last 12 months, have you had money or property stolen from you or another household member?\\""
          >
            Money stolen
            <a
              class="citation"
              href="https://ga.gallup.com/"
              rel="noopener noreferrer"
              target="_blank"
              title="Gallup World Poll"
            >
              ⓘ
            </a>
          </li>
        </ul>
        <img
          alt="Do people feel safe?"
          className="component-img"
          src="test-file"
        />
        <h5
          class="component-title"
          style="backgroundColor: rgb(100, 245, 25)"
        >
          Personal Safety
        </h5>
      </div>
    </div>
  </div>,
  <div
    className="dim-1 Foundations of Wellbeing"
    id="Foundations_of_Wellbeing"
  >
    <h3
      className="dimension-title"
      id="Foundations_of_Wellbeing"
    >
      Foundations of Wellbeing
    </h3>
    <div
      className="component-box"
    >
      <div
        className="component"
        id="Access_to_Basic_Knowledge"
      >
        <p>
          Do people have access to an educational foundation?
        </p>
        <ul>
          <li
            class="list-item"
            title="Proportion of population (age-standardized) with no schooling."
          >
            Population with no schooling 
            <a
              class="citation"
              href="http://ghdx.healthdata.org/record/global-burden-disease-study-2019-gbd-2019-covariates-1980-2019"
              rel="noopener noreferrer"
              target="_blank"
              title="Institute for Health Metrics and Evaluation"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Country experts' aggregated evaluation of the question, \\"To what extent is high quality basic education guaranteed to all, sufficient to enable them to exercise their basic rights as adult citizens?\\" "
          >
            Equal access to quality education 
            <a
              class="citation"
              href="https://v-dem.net/vdemds.html"
              rel="noopener noreferrer"
              target="_blank"
              title="Varieties of Democracy (V-Dem), Dataset Version 12"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Total number of students of official primary school age who are enrolled in any level of education, expressed as a percentage of the total population of official primary school age. Statistic is termed 'total net primary enrollment rate.'"
          >
            Primary school enrollment 
            <a
              class="citation"
              href="http://data.uis.unesco.org/"
              rel="noopener noreferrer"
              target="_blank"
              title="UN Educational, Scientific, and Cultural Organization Institute for Statistics"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Population with at least some secondary education (% ages 25 and older)"
          >
            Secondary school attainment 
            <a
              class="citation"
              href="http://hdr.undp.org/en/data"
              rel="noopener noreferrer"
              target="_blank"
              title="United Nations Development Programme (UNDP) Human Development Data"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="The absolute deviation from parity (=1) in secondary education attainment of women and men."
          >
            Gender parity in secondary attainment 
            <a
              class="citation"
              href="http://hdr.undp.org/en/data"
              rel="noopener noreferrer"
              target="_blank"
              title="United Nations Development Programme (UNDP) Human Development Data"
            >
              ⓘ
            </a>
          </li>
        </ul>
        <img
          alt="Do people have access to an educational foundation?"
          className="component-img"
          src="test-file"
        />
        <h5
          class="component-title"
          style="backgroundColor: rgb(255, 150, 150)"
        >
          Access to Basic Knowledge
        </h5>
      </div>
      <div
        className="component"
        id="Access_to_Information_and_Communications"
      >
        <p>
          Can people freely access ideas and in formation from anywhere in the world?
        </p>
        <ul>
          <li
            class="list-item"
            title="The availability of e-participation tools on national government portal for of the following uses: e-information – provision of information on the Internet; e-consultation – organizing public consultations online; and e-decision-making – involving citizens directly in decision processes. E-participation is defined as the process of engaging citizens through ICTs in policy, decision-making, and service design and delivery in order to make it participatory, inclusive, and deliberative. "
          >
            Access to online governance 
            <a
              class="citation"
              href="https://publicadministration.un.org/egovkb/en-us/Data-Center"
              rel="noopener noreferrer"
              target="_blank"
              title="UN Department of Economic and Social Affairs E-Government Survey"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="The estimated number of Internet users out of the total population, using the Internet from any device (including mobile phones) in the last 12 months. "
          >
            Internet users 
            <a
              class="citation"
              href="http://www.itu.int/en/ITU-D/Statistics/Pages/stat/default.aspx"
              rel="noopener noreferrer"
              target="_blank"
              title="International Telecommunications Union "
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Subscriptions to a public mobile telephone service using cellular technology, including the number of pre-paid SIM cards active during the past three months, expressed as the number of mobile telephone subscriptions per 100 inhabitants."
          >
            Mobile telephone subscriptions 
            <a
              class="citation"
              href="http://www.itu.int/en/ITU-D/Statistics/Pages/stat/default.aspx"
              rel="noopener noreferrer"
              target="_blank"
              title="International Telecommunications Union "
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Country experts' aggregated evaluation of the questions: To what extent is the media (a) un-biased in their coverage or lack of coverage of the opposition, (b) allowed to be critical of the regime, and (c) representative of a wide array of political perspectives?"
          >
            Alternative sources of information index
            <a
              class="citation"
              href="https://v-dem.net/vdemds.html"
              rel="noopener noreferrer"
              target="_blank"
              title="Varieties of Democracy (V-Dem), Dataset Version 12"
            >
              ⓘ
            </a>
          </li>
        </ul>
        <img
          alt="Can people freely access ideas and in formation from anywhere in the world?"
          className="component-img"
          src="test-file"
        />
        <h5
          class="component-title"
          style="backgroundColor: rgb(255, 200, 80)"
        >
          Access to Information and Communications
        </h5>
      </div>
      <div
        className="component"
        id="Health_and_Wellness"
      >
        <p>
          Do people live long and healthy lives?
        </p>
        <ul>
          <li
            class="list-item"
            title="The average number of years that a person of 60 to 64 years of age could expect to live, if he or she were to pass through life exposed to the sex- and age-specific death rates prevailing at the time of his or her 60 years, for a specific year, in a given country, territory, or geographic area."
          >
            Life expectancy at 60 
            <a
              class="citation"
              href="http://ghdx.healthdata.org/gbd-results-tool"
              rel="noopener noreferrer"
              target="_blank"
              title="Institute for Health Metrics and Evaluation"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Mortality rate due to cardiovascular diseases, cancers, diabetes, and chronic respiratory diseases among populations aged 30–70 years."
          >
            Premature deaths from non-communicable diseases 
            <a
              class="citation"
              href="http://ghdx.healthdata.org/record/ihme-data/gbd-2017-health-related-sdgs-1990-2030"
              rel="noopener noreferrer"
              target="_blank"
              title="Institute for Health Metrics and Evaluation"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Country experts' aggregated evaluation of the question, \\"To what extent is high quality basic healthcare guaranteed to all, sufficient to enable them to exercise their basic political rights as adult citizens?\\" "
          >
            Equal access to quality healthcare 
            <a
              class="citation"
              href="https://v-dem.net/vdemds.html"
              rel="noopener noreferrer"
              target="_blank"
              title="Varieties of Democracy (V-Dem), Dataset Version 12"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="The universal health coverage (UHC) measures the coverage of 9 tracer interventions and risk-standardized death rates from 32 causes amenable to personal healthcare, including vaccine-preventable diseases (e.g., diphteria, tetanus, measles), respitory infections, cancer (breast, cervical, uterine, testicular), heart diseases, diabetes, kidney disease), and the adverse effects of medical treatment."
          >
            Access to essential health services 
            <a
              class="citation"
              href="http://ghdx.healthdata.org/record/global-burden-disease-study-2019-gbd-2019-covariates-1980-2019"
              rel="noopener noreferrer"
              target="_blank"
              title="Institute for Health Metrics and Evaluation"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="The proportion of respondents answering 'satisfied' to the question, In the city or area where you live, are you satisfied or dissatisfied with the availability of quality healthcare?"
          >
            Satisfaction with availability of quality healthcare
            <a
              class="citation"
              href="https://ga.gallup.com/"
              rel="noopener noreferrer"
              target="_blank"
              title="Gallup World Poll"
            >
              ⓘ
            </a>
          </li>
        </ul>
        <img
          alt="Do people live long and healthy lives?"
          className="component-img"
          src="test-file"
        />
        <h5
          class="component-title"
          style="backgroundColor: rgb(225, 80, 225)"
        >
          Health and Wellness
        </h5>
      </div>
      <div
        className="component"
        id="Environmental_Quality"
      >
        <p>
          Is this society using its resources so they will be available for future generations?
        </p>
        <ul>
          <li
            class="list-item"
            title="Age-standardized Disability-Adjusted Life Years (DALYs) per 100,000 people resulting from ambient particulate matter pollution, including emissions from industrial activity, households, cars and trucks."
          >
            Outdoor air pollution
            <a
              class="citation"
              href="http://ghdx.healthdata.org/gbd-results-tool"
              rel="noopener noreferrer"
              target="_blank"
              title="Institute for Health Metrics and Evaluation"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Age-standardized Disability-Adjusted Life Years (DALYs) per 100,000 people attributable to lead exposure. Lead exposure is defined as acute exposure, measured by micrograms of lead per decilitre of blood, and chronic exposure, measured by micrograms of lead per gram of bone."
          >
            Lead exposure 
            <a
              class="citation"
              href="http://ghdx.healthdata.org/gbd-results-tool"
              rel="noopener noreferrer"
              target="_blank"
              title="Institute for Health Metrics and Evaluation"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Population-weighted mean levels of annual exposure to suspended particles smaller than 2.5 microns in aerodynamic diameter (PM2.5), which are capable of penetrating deep into the respiratory tract and causing severe health damage."
          >
            Particulate matter pollution 
            <a
              class="citation"
              href="http://ghdx.healthdata.org/record/global-burden-disease-study-2019-gbd-2019-covariates-1980-2019"
              rel="noopener noreferrer"
              target="_blank"
              title="Institute for Health Metrics and Evaluation"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="An index of how well a country's terrestrial protected areas overlap with the ranges of its vertebrate, invertebrate, and plant species. The Species Protection Index is calculated using remote sensing data, global biodiversity informatics, and integrative models to map suitable habitat for over 30,000 terrestrial species at high resolutions. A score of 100 indicates full coverage of all species' ranges by a country's protected areas, and a score of 0 indicates no overlap."
          >
            Species protection 
            <a
              class="citation"
              href="https://epi.yale.edu/"
              rel="noopener noreferrer"
              target="_blank"
              title="Environmental Performance Index
Map of Life"
            >
              ⓘ
            </a>
            <a
              class="citation"
              href="https://mol.org/indicators/"
              rel="noopener noreferrer"
              target="_blank"
            >
              ⓘ
            </a>
          </li>
        </ul>
        <img
          alt="Is this society using its resources so they will be available for future generations?"
          className="component-img"
          src="test-file"
        />
        <h5
          class="component-title"
          style="backgroundColor: rgb(75, 250, 0)"
        >
          Environmental Quality
        </h5>
      </div>
    </div>
  </div>,
  <div
    className="dim-2 Opportunity"
    id="Opportunity"
  >
    <h3
      className="dimension-title"
      id="Opportunity"
    >
      Opportunity
    </h3>
    <div
      className="component-box"
    >
      <div
        className="component"
        id="Personal_Rights"
      >
        <p>
          Are people’s rights as individuals protected?
        </p>
        <ul>
          <li
            class="list-item"
            title="Country experts' aggregated evaluation of the question, \\"Do citizens enjoy secure and effective access to justice?\\" "
          >
            Access to justice 
            <a
              class="citation"
              href="https://v-dem.net/vdemds.html"
              rel="noopener noreferrer"
              target="_blank"
              title="Varieties of Democracy (V-Dem), Dataset Version 12"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Country experts' aggregated evaluation of the question, \\"Is there freedom of religion?\\" "
          >
            Freedom of religion 
            <a
              class="citation"
              href="https://v-dem.net/vdemds.html"
              rel="noopener noreferrer"
              target="_blank"
              title="Varieties of Democracy (V-Dem), Dataset Version 12"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="An evaluation of three subcategories of political rights: electoral process, political pluralism and participation, and functioning of government on a scale from 0 (no political rights) to 40 (full political rights). Some countries and territories score below zero on the questions used to compose the indicator."
          >
            Political rights 
            <a
              class="citation"
              href="https://freedomhouse.org/report-types/freedom-world"
              rel="noopener noreferrer"
              target="_blank"
              title="Freedom House"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Country experts' aggregated evaluation of the question, \\"Do women enjoy the right to private property?\\"
"
          >
            Property rights for women 
            <a
              class="citation"
              href="https://v-dem.net/vdemds.html"
              rel="noopener noreferrer"
              target="_blank"
              title="Varieties of Democracy (V-Dem), Dataset Version 12"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Country experts' aggregated evaluation of the question, \\"To what extent do state authorities respect and protect the right of peaceful assembly?\\""
          >
            Freedom of peaceful assembly 
            <a
              class="citation"
              href="https://v-dem.net/vdemds.html"
              rel="noopener noreferrer"
              target="_blank"
              title="Varieties of Democracy (V-Dem), Dataset Version 12"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Country experts' aggregated evaluation of the question, \\"Are citizens able to openly discuss political issues in private homes and in public spaces?\\""
          >
            Freedom of discussion
            <a
              class="citation"
              href="https://v-dem.net/vdemds.html"
              rel="noopener noreferrer"
              target="_blank"
              title="Varieties of Democracy (V-Dem), Dataset Version 12"
            >
              ⓘ
            </a>
          </li>
        </ul>
        <img
          alt="Are people’s rights as individuals protected?"
          className="component-img"
          src="test-file"
        />
        <h5
          class="component-title"
          style="backgroundColor: rgb(255, 178, 102)"
        >
          Personal Rights
        </h5>
      </div>
      <div
        className="component"
        id="Personal_Freedom_and_Choice"
      >
        <p>
          Are people free to make their own life choices?
        </p>
        <ul>
          <li
            class="list-item"
            title="The percentage of total demand for family planning among married or in-union women aged 15 to 49 that is satisfied with modern methods."
          >
            Satisfied demand for contraception 
            <a
              class="citation"
              href="http://www.un.org/en/development/desa/population/theme/family-planning/cp_model.shtml"
              rel="noopener noreferrer"
              target="_blank"
              title="United Nations Population Division"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="The perceived level of public sector corruption based on expert opinion, measured on a scale from 0 (highly corrupt) to 100 (very clean)."
          >
            Perception of corruption 
            <a
              class="citation"
              href="www.transparency.org/cpi"
              rel="noopener noreferrer"
              target="_blank"
              title="Transparency International"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="The percentage of women aged 15-19 years who are married or in-union."
          >
            Early marriage 
            <a
              class="citation"
              href="https://www.un.org/en/development/desa/population/theme/marriage-unions/marriage_estimates.asp"
              rel="noopener noreferrer"
              target="_blank"
              title="United Nations Population Division"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="The proportion of youth who are not in employment and not in education or training. Youth are defined as persons between the ages of 15 and 24 years. The series is part of the ILO modelled estimates."
          >
            Young people not in education, employment or training 
            <a
              class="citation"
              href="https://ilostat.ilo.org/data/"
              rel="noopener noreferrer"
              target="_blank"
              title="International Labor Organization"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Contributing family workers and own-account workers as a percentage of total employment."
          >
            Vulnerable employment 
            <a
              class="citation"
              href="https://data.worldbank.org/indicator/SL.EMP.VULN.ZS"
              rel="noopener noreferrer"
              target="_blank"
              title="International Labor Organization/World Bank"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Country experts' aggregated evaluation of the question, \\"Do citizens enjoy freedom of movement and residence?\\""
          >
            Freedom of domestic movement
            <a
              class="citation"
              href="https://v-dem.net/vdemds.html"
              rel="noopener noreferrer"
              target="_blank"
              title="Varieties of Democracy (V-Dem), Dataset Version 12"
            >
              ⓘ
            </a>
          </li>
        </ul>
        <img
          alt="Are people free to make their own life choices?"
          className="component-img"
          src="test-file"
        />
        <h5
          class="component-title"
          style="backgroundColor: rgb(255, 155, 255)"
        >
          Personal Freedom and Choice
        </h5>
      </div>
      <div
        className="component"
        id="Inclusiveness"
      >
        <p>
          Is no one excluded from the opportunity to be a contributing member of society?
        </p>
        <ul>
          <li
            class="list-item"
            title="Country experts' aggregated evaluation of the question, \\"How equal is the protection of rights and freedoms across social groups by the state?\\""
          >
            Equal protection index
            <a
              class="citation"
              href="https://v-dem.net/vdemds.html"
              rel="noopener noreferrer"
              target="_blank"
              title="Varieties of Democracy (V-Dem), Dataset Version 12"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Country experts' aggregated evaluation of the question, \\"How equal is access to power?\\""
          >
            Equal access index
            <a
              class="citation"
              href="https://v-dem.net/vdemds.html"
              rel="noopener noreferrer"
              target="_blank"
              title="Varieties of Democracy (V-Dem), Dataset Version 12"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Country experts' aggregated evaluation of the question, \\"To what extent is political power distributed according to sexual orientation?\\""
          >
            Power distributed by sexual orientation
            <a
              class="citation"
              href="https://v-dem.net/vdemds.html"
              rel="noopener noreferrer"
              target="_blank"
              title="Varieties of Democracy (V-Dem), Dataset Version 12"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Country experts' aggregated evaluation of the question, \\"Are basic public services, such as order and security, primary education, clean water, and healthcare, distributed equally across social groups?\\""
          >
            Access to public services distributed by social group
            <a
              class="citation"
              href="https://v-dem.net/vdemds.html"
              rel="noopener noreferrer"
              target="_blank"
              title="Varieties of Democracy (V-Dem), Dataset Version 12"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Group Grievance indicator: discrimination, powerlessness, ethnic violence, communal violence, sectarian violence, and religious violence. "
          >
            Discrimination and violence against minorities 
            <a
              class="citation"
              href="https://fragilestatesindex.org/"
              rel="noopener noreferrer"
              target="_blank"
              title="Fund for Peace Fragile States Index"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="The proportion of respondents answering yes to the question, “Is the city or area where you live a good place or not a good place to live for gay or lesbian people?”"
          >
            Acceptance of gays and lesbians 
            <a
              class="citation"
              href="https://ga.gallup.com/"
              rel="noopener noreferrer"
              target="_blank"
              title="Gallup World Poll"
            >
              ⓘ
            </a>
          </li>
        </ul>
        <img
          alt="Is no one excluded from the opportunity to be a contributing member of society?"
          className="component-img"
          src="test-file"
        />
        <h5
          class="component-title"
          style="backgroundColor: rgb(75, 255, 255)"
        >
          Inclusiveness
        </h5>
      </div>
      <div
        className="component"
        id="Access_to_Advanced_Education"
      >
        <p>
          Do people have access to the world’s most advanced knowledge?
        </p>
        <ul>
          <li
            class="list-item"
            title="Citable documents - articles, reviews and conference papers - per 1,000 population. "
          >
            Citable documents 
            <a
              class="citation"
              href="https://www.scimagojr.com/countryrank.php"
              rel="noopener noreferrer"
              target="_blank"
              title="Scimago Journal & Country Rank"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Country experts'  aggregated evaluation of the question, \\"To what extent is academic freedom respected?\\" "
          >
            Academic freedom 
            <a
              class="citation"
              href="https://v-dem.net/vdemds.html"
              rel="noopener noreferrer"
              target="_blank"
              title="Varieties of Democracy (V-Dem), Dataset Version 12"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Proportion of females (age-standardized) with 12–18 years of education."
          >
            Women with advanced education 
            <a
              class="citation"
              href="http://ghdx.healthdata.org/record/global-burden-disease-study-2019-gbd-2019-covariates-1980-2019"
              rel="noopener noreferrer"
              target="_blank"
              title="Institute for Health Metrics and Evaluation"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="Number of years a person of tertiary school entrance age can expect to spend within tertiary education. For a child of a certain age a, the school life expectancy is calculated as the sum of the age specific enrollment rates for the levels of education specified. The part of the enrolment that is not distributed by age is divided by the school-age population for the level of education they are enrolled in, and multiplied by the duration of that level of education. The result is then added to the sum of the age-specific enrolment rates. The indicator seeks to show the overall level of development of an educational system in terms of the average number of years of schooling that the education system offers to the eligible population, including those who never enter school. "
          >
            Expected years of tertiary schooling 
            <a
              class="citation"
              href="http://data.uis.unesco.org/"
              rel="noopener noreferrer"
              target="_blank"
              title="UN Educational, Scientific, and Cultural Organization Institute for Statistics"
            >
              ⓘ
            </a>
          </li>
          <li
            class="list-item"
            title="The number of universities in a country weighted by the quality of universities, measured by university rankings on any of the three most widely used international assessments. Universities in the top 400 on any list are given double weight. Not ranked universities are given 5% weight of the top ranked universities.
"
          >
            Quality weighted universities 
            <a
              class="citation"
              href="https://www.timeshighereducation.com/world-university-rankings/2022"
              rel="noopener noreferrer"
              target="_blank"
              title="Times Higher Education World University Rankings, QS World University Rankings, and Academic Ranking of World Universities"
            >
              ⓘ
            </a>
            <a
              class="citation"
              href="https://www.topuniversities.com/university-rankings/world-university-rankings/2023"
              rel="noopener noreferrer"
              target="_blank"
              title=" Varieties of Democracy (V-Dem), Dataset Version 12 "
            >
              ⓘ
            </a>
            <a
              class="citation"
              href="https://www.shanghairanking.com/rankings/arwu/2020"
              rel="noopener noreferrer"
              target="_blank"
              title=" SPI calculations"
            >
              ⓘ
            </a>
            <a
              class="citation"
              href="https://v-dem.net/vdemds.html"
              rel="noopener noreferrer"
              target="_blank"
            >
              ⓘ
            </a>
          </li>
        </ul>
        <img
          alt="Do people have access to the world’s most advanced knowledge?"
          className="component-img"
          src="test-file"
        />
        <h5
          class="component-title"
          style="backgroundColor: rgb(255, 255, 0)"
        >
          Access to Advanced Education
        </h5>
      </div>
    </div>
  </div>,
]
`;

exports[`Tests React Components Creates a component with multiple indicators 1`] = `
<div
  className="component"
  id="Nutrition_and_Basic_Medical_Care"
>
  <p>
    Do people have enough food to eat and are they receiving basic medical care? 
  </p>
  <ul>
    <li
      class="list-item"
      title="Age-standardized Disability-Adjusted Life Years (DALYs) rate caused by HIV/AIDS, tuberculosis, diarrhea, intestinal infections, respiratory infections, otitis media, meningitis, encephalitis, diptheria, whooping cough, tetanus, measles, varicella, herpes zoster, malaria, Chagas disease, leishmaniasis, typanosomiasis, schistosomiasis, cysticercosis, cycstic echinococcosis, lymphatic filariasis, onchocerciasis, trachoma, dengue, yellow feber, rabies, intestinal nematode infections, food-borne trematodiases, leprosy, ebola, zika virus, guinea worm disease, sexually transmitted diseases (excluding HIV), hepatitis, and other infectious diseases per 100,000 people."
    >
      Infectious diseases 
      <a
        class="citation"
        href="http://ghdx.healthdata.org/gbd-results-tool"
        rel="noopener noreferrer"
        target="_blank"
        title="Institute for Health Metrics and Evaluation"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Probability of dying between birth and exactly 5 years of age, expressed per 1,000 live births. "
    >
      Child mortality rate 
      <a
        class="citation"
        href="http://www.childmortality.org"
        rel="noopener noreferrer"
        target="_blank"
        title="UN Inter-agency Group for Child Mortality Estimation"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Risk-weighted prevalence of stunting in children under 5 as measured by the summary exposure value (SEV) for child stunting. "
    >
      Child stunting 
      <a
        class="citation"
        href="http://ghdx.healthdata.org/gbd-results-tool"
        rel="noopener noreferrer"
        target="_blank"
        title="Institute for Health Metrics and Evaluation"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Maternal deaths per 100,000 livebirths in women aged 10-54 years."
    >
      Maternal mortality rate 
      <a
        class="citation"
        href="http://ghdx.healthdata.org/record/ihme-data/gbd-2017-health-related-sdgs-1990-2030"
        rel="noopener noreferrer"
        target="_blank"
        title="Institute for Health Metrics and Evaluation"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="The prevalence of undernourishment expresses the probability that a randomly selected individual from the population consumes an amount of calories that is insufficient to cover her/his energy requirement for an active and healthy life. The indicator is computed by comparing a probability distribution of habitual daily dietary energy consumption with a threshold level called the minimum dietary energy requirement. Both are based on the notion of an average individual in the reference population."
    >
      Undernourishment 
      <a
        class="citation"
        href="http://www.fao.org/economic/ess/ess-fs/ess-fadata/en/"
        rel="noopener noreferrer"
        target="_blank"
        title="Food and Agriculture Organization of the United Nations"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Risk-weighted, age-standardized prevalence of nutrition low in fruits and vegetables as measured by the summary exposure value (SEV)."
    >
      Diet low in fruits and vegetables
      <a
        class="citation"
        href="http://ghdx.healthdata.org/gbd-results-tool"
        rel="noopener noreferrer"
        target="_blank"
        title="Institute for Health Metrics and Evaluation"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Proportion of population with access to improved toilet types as defined by the Joint Monitoring Program (JMP)."
    >
      Access to improved sanitation 
      <a
        class="citation"
        href="http://ghdx.healthdata.org/record/global-burden-disease-study-2019-gbd-2019-covariates-1980-2019"
        rel="noopener noreferrer"
        target="_blank"
        title="Institute for Health Metrics and Evaluation"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Proportion of population with access to improved water sources as defined by the Joint Monitoring Program (JMP)."
    >
      Access to improved water source 
      <a
        class="citation"
        href="http://ghdx.healthdata.org/record/global-burden-disease-study-2019-gbd-2019-covariates-1980-2019"
        rel="noopener noreferrer"
        target="_blank"
        title="Institute for Health Metrics and Evaluation"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Age-standardized Disability-Adjusted Life Years (DALYs) rate attributable to unsafe water, sanitation and hygiene per 100,000 people."
    >
      Unsafe water, sanitation and hygiene
      <a
        class="citation"
        href="http://ghdx.healthdata.org/gbd-results-tool"
        rel="noopener noreferrer"
        target="_blank"
        title="Institute for Health Metrics and Evaluation"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="The proportion of respondents answering 'satisfied' to the question, \\"In the city or area where you live, are you satisfied or dissatisfied with the quality of water?\\""
    >
      Satisfaction with water quality
      <a
        class="citation"
        href="https://ga.gallup.com/"
        rel="noopener noreferrer"
        target="_blank"
        title="Gallup World Poll"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Age-standardized Disability-Adjusted Life Years (DALYs) rate caused by household air pollution from solid fuels per 100,000 people. Household air pollution includes exposure to particulate matter less than 2.5 microns in diameter (PM2.5) due to the use of solid fuels for cooking, including coal, charcoal, wood, agricultural residue, and animal dung."
    >
      Household air pollution
      <a
        class="citation"
        href="http://ghdx.healthdata.org/gbd-results-tool"
        rel="noopener noreferrer"
        target="_blank"
        title="Institute for Health Metrics and Evaluation"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="The proportion of respondents answering 'dissatisfied' to the question, “In the city or area where you live, are you satisfied or dissatisfied with the availability of good, affordable housing?”"
    >
      Dissatisfaction with housing affordability 
      <a
        class="citation"
        href="https://ga.gallup.com/"
        rel="noopener noreferrer"
        target="_blank"
        title="Gallup World Poll"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="The percentage of the population with access to electricity."
    >
      Access to electricity 
      <a
        class="citation"
        href="https://data.worldbank.org/indicator/EG.ELC.ACCS.ZS"
        rel="noopener noreferrer"
        target="_blank"
        title="SE4ALL Global Tracking Framework (World Bank, International Energy Agency, and the Energy Sector Management Assistance Program)"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="The proportion of  population primarily using clean cooking fuels and technologies for cooking."
    >
      Usage of clean fuels and technology for cooking 
      <a
        class="citation"
        href="https://apps.who.int/gho/data/node.main.SDGFUELS712?lang=en"
        rel="noopener noreferrer"
        target="_blank"
        title="World Health Organization"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Age-standardized Disability-Adjusted Life Years (DALYs) per 100,000 people from interpersonal violence. Interpersonal violence is defined as death or disability from intentional use of physical force or power, threatened or actual, from another person or group not including military or police forces."
    >
      Interpersonal violence  
      <a
        class="citation"
        href="http://ghdx.healthdata.org/gbd-results-tool"
        rel="noopener noreferrer"
        target="_blank"
        title="Institute for Health Metrics and Evaluation"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Age-standardized Disability-Adjusted Life Years (DALYs) per 100,000 people due to injuries related to transportation. These injuries include road injuries (death or disability due to unintentional interaction with an automobile, motorcycle, pedal cycle, or other vehicles) as well as other transport injuries."
    >
      Transportation related injuries 
      <a
        class="citation"
        href="http://ghdx.healthdata.org/gbd-results-tool"
        rel="noopener noreferrer"
        target="_blank"
        title="Institute for Health Metrics and Evaluation"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Physical violence index  is based on indicators that reflect violence committed by government agents and that are not directly referring to elections."
    >
      Political killings and torture 
      <a
        class="citation"
        href="https://v-dem.net/vdemds.html"
        rel="noopener noreferrer"
        target="_blank"
        title="Varieties of Democracy (V-Dem), Dataset Version 12"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Age-standardised prevalence of ever-partnered women aged 15 years and older who experienced physical or sexual violence by a current or former intimate partner in the last 12 months (%)."
    >
      Intimate partner violence
      <a
        class="citation"
        href="http://ghdx.healthdata.org/record/ihme-data/gbd-2017-health-related-sdgs-1990-2030"
        rel="noopener noreferrer"
        target="_blank"
        title="Institute for Health Metrics and Evaluation"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="The proportion of respondents answering 'yes' to the question, \\"Within the last 12 months, have you had money or property stolen from you or another household member?\\""
    >
      Money stolen
      <a
        class="citation"
        href="https://ga.gallup.com/"
        rel="noopener noreferrer"
        target="_blank"
        title="Gallup World Poll"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Proportion of population (age-standardized) with no schooling."
    >
      Population with no schooling 
      <a
        class="citation"
        href="http://ghdx.healthdata.org/record/global-burden-disease-study-2019-gbd-2019-covariates-1980-2019"
        rel="noopener noreferrer"
        target="_blank"
        title="Institute for Health Metrics and Evaluation"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Country experts' aggregated evaluation of the question, \\"To what extent is high quality basic education guaranteed to all, sufficient to enable them to exercise their basic rights as adult citizens?\\" "
    >
      Equal access to quality education 
      <a
        class="citation"
        href="https://v-dem.net/vdemds.html"
        rel="noopener noreferrer"
        target="_blank"
        title="Varieties of Democracy (V-Dem), Dataset Version 12"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Total number of students of official primary school age who are enrolled in any level of education, expressed as a percentage of the total population of official primary school age. Statistic is termed 'total net primary enrollment rate.'"
    >
      Primary school enrollment 
      <a
        class="citation"
        href="http://data.uis.unesco.org/"
        rel="noopener noreferrer"
        target="_blank"
        title="UN Educational, Scientific, and Cultural Organization Institute for Statistics"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Population with at least some secondary education (% ages 25 and older)"
    >
      Secondary school attainment 
      <a
        class="citation"
        href="http://hdr.undp.org/en/data"
        rel="noopener noreferrer"
        target="_blank"
        title="United Nations Development Programme (UNDP) Human Development Data"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="The absolute deviation from parity (=1) in secondary education attainment of women and men."
    >
      Gender parity in secondary attainment 
      <a
        class="citation"
        href="http://hdr.undp.org/en/data"
        rel="noopener noreferrer"
        target="_blank"
        title="United Nations Development Programme (UNDP) Human Development Data"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="The availability of e-participation tools on national government portal for of the following uses: e-information – provision of information on the Internet; e-consultation – organizing public consultations online; and e-decision-making – involving citizens directly in decision processes. E-participation is defined as the process of engaging citizens through ICTs in policy, decision-making, and service design and delivery in order to make it participatory, inclusive, and deliberative. "
    >
      Access to online governance 
      <a
        class="citation"
        href="https://publicadministration.un.org/egovkb/en-us/Data-Center"
        rel="noopener noreferrer"
        target="_blank"
        title="UN Department of Economic and Social Affairs E-Government Survey"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="The estimated number of Internet users out of the total population, using the Internet from any device (including mobile phones) in the last 12 months. "
    >
      Internet users 
      <a
        class="citation"
        href="http://www.itu.int/en/ITU-D/Statistics/Pages/stat/default.aspx"
        rel="noopener noreferrer"
        target="_blank"
        title="International Telecommunications Union "
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Subscriptions to a public mobile telephone service using cellular technology, including the number of pre-paid SIM cards active during the past three months, expressed as the number of mobile telephone subscriptions per 100 inhabitants."
    >
      Mobile telephone subscriptions 
      <a
        class="citation"
        href="http://www.itu.int/en/ITU-D/Statistics/Pages/stat/default.aspx"
        rel="noopener noreferrer"
        target="_blank"
        title="International Telecommunications Union "
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Country experts' aggregated evaluation of the questions: To what extent is the media (a) un-biased in their coverage or lack of coverage of the opposition, (b) allowed to be critical of the regime, and (c) representative of a wide array of political perspectives?"
    >
      Alternative sources of information index
      <a
        class="citation"
        href="https://v-dem.net/vdemds.html"
        rel="noopener noreferrer"
        target="_blank"
        title="Varieties of Democracy (V-Dem), Dataset Version 12"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="The average number of years that a person of 60 to 64 years of age could expect to live, if he or she were to pass through life exposed to the sex- and age-specific death rates prevailing at the time of his or her 60 years, for a specific year, in a given country, territory, or geographic area."
    >
      Life expectancy at 60 
      <a
        class="citation"
        href="http://ghdx.healthdata.org/gbd-results-tool"
        rel="noopener noreferrer"
        target="_blank"
        title="Institute for Health Metrics and Evaluation"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Mortality rate due to cardiovascular diseases, cancers, diabetes, and chronic respiratory diseases among populations aged 30–70 years."
    >
      Premature deaths from non-communicable diseases 
      <a
        class="citation"
        href="http://ghdx.healthdata.org/record/ihme-data/gbd-2017-health-related-sdgs-1990-2030"
        rel="noopener noreferrer"
        target="_blank"
        title="Institute for Health Metrics and Evaluation"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Country experts' aggregated evaluation of the question, \\"To what extent is high quality basic healthcare guaranteed to all, sufficient to enable them to exercise their basic political rights as adult citizens?\\" "
    >
      Equal access to quality healthcare 
      <a
        class="citation"
        href="https://v-dem.net/vdemds.html"
        rel="noopener noreferrer"
        target="_blank"
        title="Varieties of Democracy (V-Dem), Dataset Version 12"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="The universal health coverage (UHC) measures the coverage of 9 tracer interventions and risk-standardized death rates from 32 causes amenable to personal healthcare, including vaccine-preventable diseases (e.g., diphteria, tetanus, measles), respitory infections, cancer (breast, cervical, uterine, testicular), heart diseases, diabetes, kidney disease), and the adverse effects of medical treatment."
    >
      Access to essential health services 
      <a
        class="citation"
        href="http://ghdx.healthdata.org/record/global-burden-disease-study-2019-gbd-2019-covariates-1980-2019"
        rel="noopener noreferrer"
        target="_blank"
        title="Institute for Health Metrics and Evaluation"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="The proportion of respondents answering 'satisfied' to the question, In the city or area where you live, are you satisfied or dissatisfied with the availability of quality healthcare?"
    >
      Satisfaction with availability of quality healthcare
      <a
        class="citation"
        href="https://ga.gallup.com/"
        rel="noopener noreferrer"
        target="_blank"
        title="Gallup World Poll"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Age-standardized Disability-Adjusted Life Years (DALYs) per 100,000 people resulting from ambient particulate matter pollution, including emissions from industrial activity, households, cars and trucks."
    >
      Outdoor air pollution
      <a
        class="citation"
        href="http://ghdx.healthdata.org/gbd-results-tool"
        rel="noopener noreferrer"
        target="_blank"
        title="Institute for Health Metrics and Evaluation"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Age-standardized Disability-Adjusted Life Years (DALYs) per 100,000 people attributable to lead exposure. Lead exposure is defined as acute exposure, measured by micrograms of lead per decilitre of blood, and chronic exposure, measured by micrograms of lead per gram of bone."
    >
      Lead exposure 
      <a
        class="citation"
        href="http://ghdx.healthdata.org/gbd-results-tool"
        rel="noopener noreferrer"
        target="_blank"
        title="Institute for Health Metrics and Evaluation"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Population-weighted mean levels of annual exposure to suspended particles smaller than 2.5 microns in aerodynamic diameter (PM2.5), which are capable of penetrating deep into the respiratory tract and causing severe health damage."
    >
      Particulate matter pollution 
      <a
        class="citation"
        href="http://ghdx.healthdata.org/record/global-burden-disease-study-2019-gbd-2019-covariates-1980-2019"
        rel="noopener noreferrer"
        target="_blank"
        title="Institute for Health Metrics and Evaluation"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="An index of how well a country's terrestrial protected areas overlap with the ranges of its vertebrate, invertebrate, and plant species. The Species Protection Index is calculated using remote sensing data, global biodiversity informatics, and integrative models to map suitable habitat for over 30,000 terrestrial species at high resolutions. A score of 100 indicates full coverage of all species' ranges by a country's protected areas, and a score of 0 indicates no overlap."
    >
      Species protection 
      <a
        class="citation"
        href="https://epi.yale.edu/"
        rel="noopener noreferrer"
        target="_blank"
        title="Environmental Performance Index
Map of Life"
      >
        ⓘ
      </a>
      <a
        class="citation"
        href="https://mol.org/indicators/"
        rel="noopener noreferrer"
        target="_blank"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Country experts' aggregated evaluation of the question, \\"Do citizens enjoy secure and effective access to justice?\\" "
    >
      Access to justice 
      <a
        class="citation"
        href="https://v-dem.net/vdemds.html"
        rel="noopener noreferrer"
        target="_blank"
        title="Varieties of Democracy (V-Dem), Dataset Version 12"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Country experts' aggregated evaluation of the question, \\"Is there freedom of religion?\\" "
    >
      Freedom of religion 
      <a
        class="citation"
        href="https://v-dem.net/vdemds.html"
        rel="noopener noreferrer"
        target="_blank"
        title="Varieties of Democracy (V-Dem), Dataset Version 12"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="An evaluation of three subcategories of political rights: electoral process, political pluralism and participation, and functioning of government on a scale from 0 (no political rights) to 40 (full political rights). Some countries and territories score below zero on the questions used to compose the indicator."
    >
      Political rights 
      <a
        class="citation"
        href="https://freedomhouse.org/report-types/freedom-world"
        rel="noopener noreferrer"
        target="_blank"
        title="Freedom House"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Country experts' aggregated evaluation of the question, \\"Do women enjoy the right to private property?\\"
"
    >
      Property rights for women 
      <a
        class="citation"
        href="https://v-dem.net/vdemds.html"
        rel="noopener noreferrer"
        target="_blank"
        title="Varieties of Democracy (V-Dem), Dataset Version 12"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Country experts' aggregated evaluation of the question, \\"To what extent do state authorities respect and protect the right of peaceful assembly?\\""
    >
      Freedom of peaceful assembly 
      <a
        class="citation"
        href="https://v-dem.net/vdemds.html"
        rel="noopener noreferrer"
        target="_blank"
        title="Varieties of Democracy (V-Dem), Dataset Version 12"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Country experts' aggregated evaluation of the question, \\"Are citizens able to openly discuss political issues in private homes and in public spaces?\\""
    >
      Freedom of discussion
      <a
        class="citation"
        href="https://v-dem.net/vdemds.html"
        rel="noopener noreferrer"
        target="_blank"
        title="Varieties of Democracy (V-Dem), Dataset Version 12"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="The percentage of total demand for family planning among married or in-union women aged 15 to 49 that is satisfied with modern methods."
    >
      Satisfied demand for contraception 
      <a
        class="citation"
        href="http://www.un.org/en/development/desa/population/theme/family-planning/cp_model.shtml"
        rel="noopener noreferrer"
        target="_blank"
        title="United Nations Population Division"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="The perceived level of public sector corruption based on expert opinion, measured on a scale from 0 (highly corrupt) to 100 (very clean)."
    >
      Perception of corruption 
      <a
        class="citation"
        href="www.transparency.org/cpi"
        rel="noopener noreferrer"
        target="_blank"
        title="Transparency International"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="The percentage of women aged 15-19 years who are married or in-union."
    >
      Early marriage 
      <a
        class="citation"
        href="https://www.un.org/en/development/desa/population/theme/marriage-unions/marriage_estimates.asp"
        rel="noopener noreferrer"
        target="_blank"
        title="United Nations Population Division"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="The proportion of youth who are not in employment and not in education or training. Youth are defined as persons between the ages of 15 and 24 years. The series is part of the ILO modelled estimates."
    >
      Young people not in education, employment or training 
      <a
        class="citation"
        href="https://ilostat.ilo.org/data/"
        rel="noopener noreferrer"
        target="_blank"
        title="International Labor Organization"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Contributing family workers and own-account workers as a percentage of total employment."
    >
      Vulnerable employment 
      <a
        class="citation"
        href="https://data.worldbank.org/indicator/SL.EMP.VULN.ZS"
        rel="noopener noreferrer"
        target="_blank"
        title="International Labor Organization/World Bank"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Country experts' aggregated evaluation of the question, \\"Do citizens enjoy freedom of movement and residence?\\""
    >
      Freedom of domestic movement
      <a
        class="citation"
        href="https://v-dem.net/vdemds.html"
        rel="noopener noreferrer"
        target="_blank"
        title="Varieties of Democracy (V-Dem), Dataset Version 12"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Country experts' aggregated evaluation of the question, \\"How equal is the protection of rights and freedoms across social groups by the state?\\""
    >
      Equal protection index
      <a
        class="citation"
        href="https://v-dem.net/vdemds.html"
        rel="noopener noreferrer"
        target="_blank"
        title="Varieties of Democracy (V-Dem), Dataset Version 12"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Country experts' aggregated evaluation of the question, \\"How equal is access to power?\\""
    >
      Equal access index
      <a
        class="citation"
        href="https://v-dem.net/vdemds.html"
        rel="noopener noreferrer"
        target="_blank"
        title="Varieties of Democracy (V-Dem), Dataset Version 12"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Country experts' aggregated evaluation of the question, \\"To what extent is political power distributed according to sexual orientation?\\""
    >
      Power distributed by sexual orientation
      <a
        class="citation"
        href="https://v-dem.net/vdemds.html"
        rel="noopener noreferrer"
        target="_blank"
        title="Varieties of Democracy (V-Dem), Dataset Version 12"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Country experts' aggregated evaluation of the question, \\"Are basic public services, such as order and security, primary education, clean water, and healthcare, distributed equally across social groups?\\""
    >
      Access to public services distributed by social group
      <a
        class="citation"
        href="https://v-dem.net/vdemds.html"
        rel="noopener noreferrer"
        target="_blank"
        title="Varieties of Democracy (V-Dem), Dataset Version 12"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Group Grievance indicator: discrimination, powerlessness, ethnic violence, communal violence, sectarian violence, and religious violence. "
    >
      Discrimination and violence against minorities 
      <a
        class="citation"
        href="https://fragilestatesindex.org/"
        rel="noopener noreferrer"
        target="_blank"
        title="Fund for Peace Fragile States Index"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="The proportion of respondents answering yes to the question, “Is the city or area where you live a good place or not a good place to live for gay or lesbian people?”"
    >
      Acceptance of gays and lesbians 
      <a
        class="citation"
        href="https://ga.gallup.com/"
        rel="noopener noreferrer"
        target="_blank"
        title="Gallup World Poll"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Citable documents - articles, reviews and conference papers - per 1,000 population. "
    >
      Citable documents 
      <a
        class="citation"
        href="https://www.scimagojr.com/countryrank.php"
        rel="noopener noreferrer"
        target="_blank"
        title="Scimago Journal & Country Rank"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Country experts'  aggregated evaluation of the question, \\"To what extent is academic freedom respected?\\" "
    >
      Academic freedom 
      <a
        class="citation"
        href="https://v-dem.net/vdemds.html"
        rel="noopener noreferrer"
        target="_blank"
        title="Varieties of Democracy (V-Dem), Dataset Version 12"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Proportion of females (age-standardized) with 12–18 years of education."
    >
      Women with advanced education 
      <a
        class="citation"
        href="http://ghdx.healthdata.org/record/global-burden-disease-study-2019-gbd-2019-covariates-1980-2019"
        rel="noopener noreferrer"
        target="_blank"
        title="Institute for Health Metrics and Evaluation"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="Number of years a person of tertiary school entrance age can expect to spend within tertiary education. For a child of a certain age a, the school life expectancy is calculated as the sum of the age specific enrollment rates for the levels of education specified. The part of the enrolment that is not distributed by age is divided by the school-age population for the level of education they are enrolled in, and multiplied by the duration of that level of education. The result is then added to the sum of the age-specific enrolment rates. The indicator seeks to show the overall level of development of an educational system in terms of the average number of years of schooling that the education system offers to the eligible population, including those who never enter school. "
    >
      Expected years of tertiary schooling 
      <a
        class="citation"
        href="http://data.uis.unesco.org/"
        rel="noopener noreferrer"
        target="_blank"
        title="UN Educational, Scientific, and Cultural Organization Institute for Statistics"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="The number of universities in a country weighted by the quality of universities, measured by university rankings on any of the three most widely used international assessments. Universities in the top 400 on any list are given double weight. Not ranked universities are given 5% weight of the top ranked universities.
"
    >
      Quality weighted universities 
      <a
        class="citation"
        href="https://www.timeshighereducation.com/world-university-rankings/2022"
        rel="noopener noreferrer"
        target="_blank"
        title="Times Higher Education World University Rankings, QS World University Rankings, and Academic Ranking of World Universities"
      >
        ⓘ
      </a>
      <a
        class="citation"
        href="https://www.topuniversities.com/university-rankings/world-university-rankings/2023"
        rel="noopener noreferrer"
        target="_blank"
        title=" Varieties of Democracy (V-Dem), Dataset Version 12 "
      >
        ⓘ
      </a>
      <a
        class="citation"
        href="https://www.shanghairanking.com/rankings/arwu/2020"
        rel="noopener noreferrer"
        target="_blank"
        title=" SPI calculations"
      >
        ⓘ
      </a>
      <a
        class="citation"
        href="https://v-dem.net/vdemds.html"
        rel="noopener noreferrer"
        target="_blank"
      >
        ⓘ
      </a>
    </li>
    <li
      class="list-item"
      title="GDP per capita based on purchasing power parity (PPP). PPP GDP is gross domestic product converted to international dollars using purchasing power parity rates. An international dollar has the same purchasing power over GDP as the U.S. dollar has in the United States. GDP at purchaser's prices is the sum of gross value added by all resident producers in the economy plus any product taxes and minus any subsidies not included in the value of the products. It is calculated without making deductions for depreciation of fabricated assets or for depletion and degradation of natural resources. Data are in constant 2017 international dollars."
    >
      <a
        class="citation"
        href="http://data.worldbank.org/indicator/NY.GDP.PCAP.PP.KD"
        rel="noopener noreferrer"
        target="_blank"
        title="World Bank"
      >
        ⓘ
      </a>
    </li>
  </ul>
  <img
    alt="Do people have enough food to eat and are they receiving basic medical care? "
    className="component-img"
    src="test-file"
  />
  <h5
    class="component-title"
    style="backgroundColor: rgb(225, 100, 100)"
  >
    Nutrition and Basic Medical Care
  </h5>
</div>
`;

exports[`Tests React Components Should create multiple links from a single object 1`] = `
<li
  class="list-item"
  title="The number of universities in a country weighted by the quality of universities, measured by university rankings on any of the three most widely used international assessments. Universities in the top 400 on any list are given double weight. Not ranked universities are given 5% weight of the top ranked universities.
"
>
  Quality weighted universities 
  <a
    class="citation"
    href="https://www.timeshighereducation.com/world-university-rankings/2022"
    rel="noopener noreferrer"
    target="_blank"
    title="Times Higher Education World University Rankings, QS World University Rankings, and Academic Ranking of World Universities"
  >
    ⓘ
  </a>
  <a
    class="citation"
    href="https://www.topuniversities.com/university-rankings/world-university-rankings/2023"
    rel="noopener noreferrer"
    target="_blank"
    title=" Varieties of Democracy (V-Dem), Dataset Version 12 "
  >
    ⓘ
  </a>
  <a
    class="citation"
    href="https://www.shanghairanking.com/rankings/arwu/2020"
    rel="noopener noreferrer"
    target="_blank"
    title=" SPI calculations"
  >
    ⓘ
  </a>
  <a
    class="citation"
    href="https://v-dem.net/vdemds.html"
    rel="noopener noreferrer"
    target="_blank"
  >
    ⓘ
  </a>
</li>
`;

exports[`Tests React Components Should return an Indicator with valid props 1`] = `
<li
  class="list-item"
  title="Probability of dying between birth and exactly 5 years of age, expressed per 1,000 live births. "
>
  Child mortality rate 
  <a
    class="citation"
    href="http://www.childmortality.org"
    rel="noopener noreferrer"
    target="_blank"
    title="UN Inter-agency Group for Child Mortality Estimation"
  >
    ⓘ
  </a>
</li>
`;
